# YRobot

./: .env.example  .gitignore  README.md  index.html  plan.md  pyproject.toml  style.css
docs/architecture/: generic-conversational-robot-architecture.html
reachy_mini_live_chat/: __init__.py  bus.py  config.py  main.py  pipeline.py  text_utils.py  web.py
reachy_mini_live_chat/asr/: __init__.py  funasr_asr.py
reachy_mini_live_chat/assets/: README.txt
reachy_mini_live_chat/audio/: __init__.py  aec.py  denoise.py  io.py  respeaker_config.py  vad.py
reachy_mini_live_chat/llm/: __init__.py  client.py  prompts.py  router.py
reachy_mini_live_chat/motion/: __init__.py  controller.py  doa.py  emotions.py  safety.py
reachy_mini_live_chat/omni/: __init__.py  client.py  fake_server.py  protocol.py  video.py
reachy_mini_live_chat/sim/: __init__.py  fake_mini.py
reachy_mini_live_chat/static/: index.html  main.js  style.css
reachy_mini_live_chat/tts/: __init__.py  kokoro_tts.py
reachy_mini_live_chat/vision/: __init__.py  gating.py
scripts/: minicpmo_video_smoke.py  probe_omni.py  probe_realtime.py  setup_cm4.sh  setup_mac.sh
tests/: test_agc.py  test_audio.py  test_audio_config.py  test_barge.py  test_config.py  test_daemon_motion.py  test_doa.py  test_emotions.py  test_main.py  test_motion.py  test_omni.py  test_omni_protocol.py  test_omni_video.py  test_perception.py  test_pipeline_smoke.py  test_protocol.py  test_realtime.py  test_robot.py  test_safety.py  test_session.py  test_speech_sync.py  test_state.py  test_text.py  test_text_and_llm.py  test_turn.py  test_turn_discard.py  test_vad.py  test_vision_gating.py
yrobot/: __init__.py  audio.py  audio_config.py  config.py  main.py  motion.py  omni.py  perception.py  protocol.py  realtime.py  robot.py  runtime.py  state.py  turn.py
