[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reachy-mini-live-chat"
version = "0.2.0"
description = "Realtime full-duplex audio-visual dialogue for Reachy Mini: streams mic+camera to a remote MiniCPM-o 4.5 omni model (llama.cpp-omni) over WebSocket, with DOA head-tracking and safety-clamped expressive motion."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Reachy Mini Live Chat" }]
keywords = ["reachy_mini", "robotics", "voice-assistant", "full-duplex", "omni", "minicpm-o", "websocket"]

# The brain is remote (over WebSocket), so the robot is just a client. The only hard deps
# are numpy (PCM math) and websockets (the omni link). Everything else — scipy, VAD, camera
# codecs, web UI, AEC — is an optional, lazy-imported extra with a pure-numpy/stdlib fallback,
# so a minimal on-robot install stays tiny.
dependencies = [
    "numpy>=1.24",
    "websockets>=12",
]

[project.optional-dependencies]
# The robot SDK — provides media I/O + motion. Normally already present in the CM4 image.
robot = ["reachy-mini"]

# --- optional quality/feature add-ons (each has a fallback if absent) ---------
config = ["python-dotenv>=1.0"]          # read a .env file (else use real env vars)
hifi = ["scipy>=1.10"]                    # polyphase resampling (else numpy linear interp)
vad = ["onnxruntime"]                     # Silero v5 VAD on CPU via onnx (else numpy energy VAD). No torch.
vision = ["pillow"]                       # downscale frames (else the SDK's full-res get_frame_jpeg)
web = ["fastapi", "uvicorn"]              # control/monitor web UI (headless works without it)
aec = ["webrtc-audio-processing"]         # true echo cancellation (else duck-and-gate)
simcam = ["opencv-python", "sounddevice", "soundfile"]  # laptop --sim: Mac mic/speaker/webcam

# On-robot (Wireless CM4, ARM64 Linux): minimal client. reachy-mini is usually already in the
# robot image, so in practice `pip install .` (numpy + websockets) is enough. dotenv is a nicety.
cm4 = ["reachy-mini", "python-dotenv>=1.0"]

# A comfortable dev-laptop bridge to the robot (smaller frames, neural VAD, web UI, hi-fi audio).
laptop = [
    "reachy-mini", "python-dotenv>=1.0",
    "scipy>=1.10", "onnxruntime", "pillow",
    "fastapi", "uvicorn",
    "opencv-python", "sounddevice", "soundfile",
]

dev = ["pytest>=7", "ruff", "numpy>=1.24", "pillow", "python-dotenv>=1.0", "onnxruntime"]

[project.entry-points."reachy_mini_apps"]
# The Reachy Mini daemon discovers the app through this entry point.
live_chat = "reachy_mini_live_chat.main:LiveChatApp"

[project.scripts]
reachy-mini-live-chat = "reachy_mini_live_chat.main:cli"

[tool.setuptools.packages.find]
include = ["reachy_mini_live_chat*"]

[tool.setuptools.package-data]
reachy_mini_live_chat = ["static/*", "assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
