[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yrobot"
version = "1.0.0"
description = "Full-duplex voice+vision live chat for Reachy Mini on MiniCPM-o 4.5 realtime"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy>=1.26",
    "websockets>=12,<16",
    "soxr>=0.4",
    "reachy-mini>=1.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
yrobot = "yrobot.main:main"

[project.entry-points."reachy_mini_apps"]
yrobot = "yrobot.main:YRobotApp"

[tool.setuptools.packages.find]
include = ["yrobot*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
