[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yrobot"
version = "3.0.0"
description = "Full-duplex MiniCPM-o 4.5 conversation for Reachy Mini Wireless"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy>=2.2.5,<2.3",
    "python-dotenv>=1,<2",
    "reachy-mini==1.9.0",
    "webrtcvad-wheels>=2.0.14,<3",
    "websockets>=13,<16",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.9"]

[project.entry-points."reachy_mini_apps"]
yrobot = "yrobot.main:Yrobot"

[project.scripts]
yrobot = "yrobot.main:cli"

[tool.setuptools.packages.find]
include = ["yrobot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
